# ridgeback_examples

./: CMakeLists.txt  README.md  package.xml
launch/: simple_navigation.launch
map/: sk_building_done.pgm  sk_building_done.yaml
src/: go_to_goal.py  go_to_goal_full.py  go_to_goal_holonomic.py  simple_navigation.cpp  teleop_key.py
world/: sk_building.world  sk_building_done.world
